# eujeno

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  InitalRequest.md  LICENSE  NOTICE  README.md  TRADEMARKS.md  install.sh  pyproject.toml
.github/workflows/: deploy.yml  release-binaries.yml
app/: README.md  index.html  package-lock.json  package.json  vite.config.js
app/src/: App.jsx  ChatPage.jsx  NetworkPage.jsx  SettingsPage.jsx  Sidebar.jsx  SwarmCanvas.jsx  api.js  theme.js
axyn/: __main__.py  cli.py  config.py  mcp_config.py
axyn/model/: blocks.py  cache.py  payload.py
axyn/net/: coordinator.py  framing.py  generation.py  node.py  node_exec.py  orchestrator.py  server.py  topology.py  wire.py
axyn/ui/: agent.py  server.py
docker/: Dockerfile  compose.yaml
docs/: .gitignore  00-vision-architecture.md  README.md  ROADMAP.md  next.config.mjs  package-lock.json  package.json  theme.config.jsx
docs/decisions/: ADR-0001-implementation-forks.md  ADR-0002-connettivita-nat.md  ADR-0002-nat-connectivity.md  ADR-0003-allocazione-capacity-aware.md  ADR-0003-capacity-aware-allocation.md
docs/examples/: agents.md  coordinator.md  docker.md  frontend.md  p2p.md  topology.localhost.json
docs/pages/: _meta.js  cli-reference.mdx  deployment.mdx  design-roadmap.mdx  index.mdx  models.mdx
docs/plans/: 2026-06-17-cli-axyn.md  2026-06-17-cli-enablers.md  2026-06-17-cli-mcp.md  2026-06-17-cli-synapse.md  2026-06-17-frontend-phase1.md  2026-06-17-frontend-phase2.md  2026-06-17-frontend-phase3-mcp.md  2026-06-17-openai-api.md  2026-06-17-p2p-entry.md  2026-06-17-part-1-peer-node.md  2026-06-17-part1-networking.md  2026-06-17-part2-coordinator.md  2026-06-17-part2a-p2p-gossip.md  2026-06-17-part3-failover.md  2026-06-17-tool-calling.md  2026-06-18-auto-assembly-mvp.md
docs/prd/: cli.md  part-1-peer-node.md  part-2-discovery-routing.md  part-3-queue-load-balancing.md  part-4-incentives-reputation.md  part-5-security-bft.md
eujeno/: __main__.py  cli.py  config.py  mcp_config.py
eujeno/model/: generate.py  loader.py  masking.py  mlx_backend.py
eujeno/net/: __init__.py  allocator.py  capacity.py  coordinator.py  discovery.py  generation.py  jobstore.py  metrics.py  node.py  node_exec.py  nodeconfig.py  orchestrator.py  sampling.py  server.py  tools.py  topology.py
eujeno/ui/: manager.py  mcp.py  server.py
frontend/: .thumbnail  Synapse Dashboard.dc.html
launcher/: go.mod  main.go  main_test.go
specs/: 00-vision-architecture.md  README.md  ROADMAP.md
specs/decisions/: ADR-0001-implementation-forks.md  ADR-0002-nat-connectivity.md
specs/design/: .thumbnail  Eujeno App.dc.html
specs/examples/: agents.md  code_agent.py  docker.md
specs/plans/: 2026-06-17-cli-enablers.md  2026-06-17-frontend-phase1.md  2026-06-17-frontend-phase2.md  2026-06-17-frontend-phase3-mcp.md  2026-06-17-part-1-peer-node.md  2026-06-18-auto-assembly-mvp.md
specs/prd/: part-1-peer-node.md  part-2-discovery-routing.md  part-3-queue-load-balancing.md  part-5-security-bft.md
synapse/: __main__.py  cli.py  config.py  mcp_config.py
synapse/model/: blocks.py  cache.py  generate.py  loader.py  masking.py  payload.py
synapse/net/: allocator.py  capacity.py  coordinator.py  discovery.py  framing.py  node.py  (+8 more)
tests/: _mcp_echo_server.py  conftest.py  test_agent_loop.py  test_allocator.py  test_auto_assign.py  test_blocks.py  test_boundaries.py  test_cache.py  test_capacity.py  test_cli.py  test_cli_coordinator.py  test_cli_fit.py  test_cli_infer.py  test_cli_mcp.py  test_cli_models.py  test_config_dims.py  test_coordinator_e2e.py  test_coordinator_jobs_e2e.py  test_coverage_gaps.py  test_device.py  test_discovery.py  test_dtype.py  test_failover_e2e.py  test_failover_resume_e2e.py  test_framing.py  test_generation.py  test_golden.py  test_gossip_e2e.py  test_infer_peer.py  test_jobstore.py  test_load_balancing.py  test_loader.py  test_masking.py  test_mcp_config.py  test_mcp_registry.py  test_metrics.py  test_node_api_e2e.py  test_node_exec.py  test_nodeconfig.py  test_openai_e2e.py  (+21 more)
web/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
(+75 files in other folders)
