[project]
name = "axyn"
version = "0.0.1"
description = "Decentralized peer-to-peer LLM inference network"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Alberto Ferrazzoli", email = "alberto.ferrazzoli@gmail.com" }]
dependencies = [
    "torch>=2.2",
    "transformers==4.46.3",
    "accelerate>=1.0",
    "safetensors>=0.4.5",
    "huggingface_hub>=0.26",
    "typer>=0.9",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "websockets>=12",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
axyn = "axyn.cli:app"

[tool.pytest.ini_options]
markers = ["slow: scarica/esegue il modello (lento)"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["axyn*"]

[tool.setuptools.package-data]
"axyn.ui" = ["static/*.html"]
