[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eujeno"
version = "0.1.3"
description = "Decentralized peer-to-peer LLM inference network"
requires-python = ">=3.11"
license = "BUSL-1.1"
license-files = ["LICENSE"]
authors = [{ name = "Alberto Ferrazzoli", email = "alberto.ferrazzoli@gmail.com" }]
dependencies = [
    "torch>=2.2",
    # PyTorch dropped x86 macOS after 2.2.2 (a numpy-1-era build). Pin numpy<2 there
    # so a fresh launcher provisioning on an Intel Mac doesn't pull numpy 2 and break
    # torch ("Failed to initialize NumPy: _ARRAY_API not found"). Other platforms get
    # a modern torch that supports numpy 2, so they stay unconstrained.
    "numpy<2; platform_system == 'Darwin' and platform_machine == 'x86_64'",
    "transformers==4.46.3",
    "accelerate>=1.0",
    "safetensors>=0.4.5",
    "huggingface_hub>=0.26",
    "typer>=0.9",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "websockets>=12",
    "mcp>=1.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
eujeno = "eujeno.cli:app"

[tool.pytest.ini_options]
markers = ["slow: scarica/esegue il modello (lento)"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["eujeno*"]

[tool.setuptools.package-data]
"eujeno.ui" = ["static/**/*", "static/*.html"]
